@@ -5172,6 +5172,7 @@ typedef struct {
   gcv_object_t current_version         _attribute_aligned_object_; /* most recent class-version, points back to this class */
   gcv_object_t direct_slots            _attribute_aligned_object_;
   gcv_object_t direct_default_initargs _attribute_aligned_object_;
+  gcv_object_t direct_accessors        _attribute_aligned_object_;
   gcv_object_t instantiated            _attribute_aligned_object_;
   gcv_object_t direct_subclasses       _attribute_aligned_object_; /* list of weak-pointers to all finalized direct subclasses */
   gcv_object_t proto                   _attribute_aligned_object_; /* class prototype - an instance or NIL */
